test/conformance/chainsaw/cli/apply/apply-vps-in-cluster-mode/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: apply-vps-in-cluster-mode
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - script:
        content: kubectl apply -f deployment1.yaml
  - name: step-02
    try:
    - script:
        content: kubectl apply -f deployment2.yaml
  - name: step-03
    try:
    - script:
        content: kyverno apply policy.yaml --cluster
        check:
          (contains($stdout, 'policy check-deployment-labels -> resource default/Deployment/bad-deployment failed:')): true
